      (Closes: #767107).
    + [BR] Check source version (Closes: #749103).
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/script.{desc,pm}:
    + [BR] Fix some false negatives for
      command-with-path-in-maintainer-script tag.
      (Closes: #769845).
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for
      missing-license-paragraph-in-dep5-copyright tag.
      Do not allow to reference header paragraph,
      emit a specific tag.
      (Closes: #766118).
    + [BR] Detect if license short name are unique.
    + [BR] Avoid false positive license-problem-undefined-license
      for - in short license.
    + [BR] Warn when using reference to header license.
      (Closes: #769818).

  * collection/strings:
    + [NT] Pass "-a" to strings to avoid possible security
      issues in strings.

  * commands/reporting-{lintian-harness,sync-state}:
    + [NT] New files (internal commands for the reporting
      framework).

  * data/binaries/arch-regex:
    + [NT] Add arm64 and ppc64el regex.
    + [NT] Correct armel and armhf regex to cope with
      statically linked binaries.  (Closes: #768884)
  * data/binaries/embedded-libs:
    + [RG] Do not warn about libpng1.6 embedding libpng
    + [RG] Add a new string to detect embedders of libpng
  * data/changes-file/known-dists:
    + [ADB] Add "stretch".
  * data/cruft/rfc-whitelist:
    + [BR] Whitelist dual licensed vorbis rfc5215.
  * data/files/privacy-breaker-websites:
    + [BR] Add specific test for privacy breach with modernizr.js
      (Closes: #769679).
    + [BR] Add /logos/ to privacy-breach-logo.
    + [BR] Add specific test for libjs-openlayer.
    + [BR] Detect twitter logo.